# Bachelor_project_Umbumping-Cars

./: Homework 2.ipynb  README.md  lookup_table.csv  trajectories.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumper_cars/share/bumper_cars/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/: dilated_trajectories.json  lookup_table.csv  seed_0.json  seed_1.json  seed_3.json  trajectories.json
src/CBF_dev/: C3BF_imp_plotter.py  CBF_robotarium.py
src/DWA_dev/: DWA.py
src/LBP_dev/: LBP.py  lattice.py
src/MPC_dev/: MPC copy.py  MPC.py  MPC_PR.py  MPC_ass  MPC_try.py  sim2d.py
src/bumper_cars/: init.json  package.xml  params.json  rviz2_config.rviz  setup.cfg  setup.py
src/cbf_dev/: package.xml  setup.cfg  setup.py
src/custom_message/: CMakeLists.txt
src/dwa_dev/: package.xml  setup.cfg  setup.py  trajectories.json
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lattice_planning/: LBP.csv  LBP.json  LBP.py  generate_trajectories_LBP.py  lattice.py  lattice_look_up.py  lattice_motion_model.py  lattice_planner.py  lbp_trajectory_following.py
src/lbp_dev/: package.xml  setup.cfg  setup.py
src/log/: latest_build
src/mpc_dev/: package.xml  setup.cfg  setup.py
src/my_box_bot_gazebo/: CMakeLists.txt  package.xml
src/planner/: controller.py  frenet.py  package.xml  setup.py
src/seed_simulation/: circular_seed_0.json  circular_seed_1.json  package.xml  setup.cfg  setup.py
src/seeds/: circular_seed_0.json  (+71 more)
(+466 files in other folders)
